# hsds

./: .gitignore  BENCHMARK_REPORT.md  CITATION.cff  README.md  STATISTICAL_REPORT.md  harmonix.code-workspace  mypy.ini  pyproject.toml  pytest_cov_out.txt  pytest_out.txt  requirements-dev.txt  ruff.toml  secret_traversal_test.json  sonar-project.properties
.github/workflows/: ci.yml  pre-commit.yml  publish.yml  sonarcloud.yml  sourcery.yml  tests.yml
.hypothesis/constants/: 4e8949a18c4f639c  5e498f4492fc8f97  8106ce1d774cec3a  96fcc3929e61d9fc  aa737f585393c75c  bcbd072b83c27ac2  d1ba5aa496a25454  d26ad96178a02e08  f593107c8dc9a76a  fbc0a78c4ba82bf0
.hypothesis/tmp/: tmpqcgouezp  tmprjwl5ify
benchmarks/: METHODOLOGY.md  compare_results.py  robustness_data.csv  run_statistics.py
benchmarks/pressure_vessel/: ANALYSIS.md
benchmarks/pressure_vessel/dependent_space/: history_data.csv  run.py  summary.json
benchmarks/pressure_vessel/full_parametric_extreme/: history_data.csv  run.py  summary.json
benchmarks/pressure_vessel/semi_dependent/: history_data.csv  run.py  summary.json
benchmarks/pressure_vessel/static_penalty/: history_data.csv  run.py  summary.json
benchmarks/retaining_wall/: ANALYSIS.md  common.py
benchmarks/retaining_wall/dependent_space/: history_data.csv  run.py  summary.json
benchmarks/retaining_wall/static_penalty/: history_data.csv  run.py  summary.json
benchmarks/robot_gripper/: ANALYSIS.md
benchmarks/robot_gripper/full_parametric_extreme/: history_data.csv  run.py  summary.json
benchmarks/robot_gripper/static_penalty/: history_data.csv  run.py  summary.json
benchmarks/speed_reducer/: ANALYSIS.md
benchmarks/speed_reducer/full_parametric_extreme/: history_data.csv  run.py  summary.json
benchmarks/speed_reducer/semi_dependent/: history_data.csv  run.py  summary.json
benchmarks/speed_reducer/static_penalty/: history_data.csv  run.py  summary.json
benchmarks/spring_design/: ANALYSIS.md
benchmarks/spring_design/full_parametric_extreme/: history_data.csv  run.py  summary.json
benchmarks/spring_design/semi_dependent/: history_data.csv  run.py  summary.json
benchmarks/spring_design/static_penalty/: history_data.csv  run.py  summary.json
benchmarks/utils/: __init__.py  plotter.py
benchmarks/welded_beam/: ANALYSIS.md
benchmarks/welded_beam/dependent_space/: history_data.csv  run.py  summary.json
benchmarks/welded_beam/static_penalty/: history_data.csv  run.py  summary.json
examples/: 01_quickstart.py  02_welded_beam.py  03_rc_beam_design.py  04_custom_variable.py  05_multi_objective.py  06_steel_beam_design.py  07_rc_section_full.py
harmonix/: __init__.py  logging.py  optimizer.py  pareto.py  variables.py
harmonix/spaces/: engineering.py  math.py
hsds/: __init__.py  optimizer.py
tests/: conftest.py  test_bandwidth.py  test_contracts.py  test_coverage_gaps.py  test_edge_cases.py  test_failures.py  test_hypothesis.py  test_logging.py  test_multiobjective_logging.py  test_numeric_contracts.py  test_optimizer.py  test_pareto.py  test_registry.py  test_space.py  test_spaces.py  test_variables.py
