[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "harmonix"
version = "1.0.0"
description = "Harmony Search optimisation with dependent variable spaces and engineering domain catalogues"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Abdulkadir Özcan" }]
requires-python = ">=3.8"
keywords = [
    "harmony search", "metaheuristic", "optimisation",
    "structural engineering", "multi-objective",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
]

[project.urls]
"Source" = "https://github.com/abdulkadiroz/harmonix"

[tool.setuptools.packages.find]
where = ["."]
include = ["harmonix*"]
