[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harmonix-opt"
version = "1.0.0"
description = "Harmony Search optimisation with dependent variable spaces and engineering domain catalogues"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Abdulkadir Özcan", email = "a.kdr.ozcn@gmail.com" }]
requires-python = ">=3.8"
keywords = [
    "harmony search",
    "metaheuristic",
    "optimisation",
    "optimization",
    "structural engineering",
    "multi-objective",
    "pareto",
    "aci-318",
    "ec2",
    "engineering optimization",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

[project.urls]
"Homepage" = "https://github.com/AutoPyloter/harmonix"
"Source" = "https://github.com/AutoPyloter/harmonix"
"Bug Tracker" = "https://github.com/AutoPyloter/harmonix/issues"
"Documentation" = "https://github.com/AutoPyloter/harmonix/wiki"
"Changelog" = "https://github.com/AutoPyloter/harmonix/releases"

[tool.setuptools.packages.find]
where = ["."]
include = ["harmonix*"]

[tool.setuptools.package-data]
harmonix = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"
