[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhsds"
version = "2.0.0"
description = "Harmony Search Algorithm for Dependent Design Spaces"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Abdulkadir Özcan", email = "a.kdr.ozcn@gmail.com" }]
requires-python = ">=3.8"
keywords = [
    "harmony search",
    "metaheuristic",
    "optimization",
    "dependent design spaces",
    "structural engineering",
    "multi-objective",
    "pareto",
    "aci-318",
    "ec2",
    "engineering optimization",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

[project.urls]
"Homepage" = "https://github.com/AutoPyloter/hsds"
"Source" = "https://github.com/AutoPyloter/hsds"
"Bug Tracker" = "https://github.com/AutoPyloter/hsds/issues"
"Documentation" = "https://github.com/AutoPyloter/hsds/wiki"
"Changelog" = "https://github.com/AutoPyloter/hsds/releases"

[tool.setuptools.packages.find]
where = ["."]
include = ["hsds*"]

[tool.setuptools.package-data]
hsds = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"
